<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pattern Password</string>
    
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
	
    <string name="menu">Menu</string>
    
    
	<string name="uname">Username</string>
	<string name="pword">Pasword</string>
	<string name="enter">Start Here</string>
	<string name="signU"><u>New Account</u></string>
	
	<string name="fname">Fullname</string>
	<string name="email">Valid Email</string>
	<string name="address">Address</string>
	<string name="pno">Mobile No.</string>
	<string name="clearf">Clear</string>
	<string name="submit">Submit</string>
	
	<string name="register">Register</string>
   
</resources>